--- a/changegraphdialog.ui
+++ b/changegraphdialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>changeGraph</class>
- <widget class="QDialog" name="changeGraph">
+ <class>changeGraphDialog</class>
+ <widget class="QDialog" name="changeGraphDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
