--- a/forms/changegraphdialog.ui
+++ b/forms/changegraphdialog.ui
@@ -212,7 +212,7 @@
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <item>
-         <widget class="QCheckBox" name="checkBox">
+         <widget class="QCheckBox" name="checkbox_if_automatic_range">
           <property name="text">
            <string>Automatic</string>
           </property>
@@ -275,7 +275,7 @@
            <item>
             <layout class="QVBoxLayout" name="verticalLayout_3">
              <item>
-              <widget class="QRadioButton" name="radioButton">
+              <widget class="QRadioButton" name="rb_relative">
                <property name="text">
                 <string>Relati&amp;ve</string>
                </property>
@@ -285,7 +285,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QRadioButton" name="radioButton_2">
+              <widget class="QRadioButton" name="rb_absolute">
                <property name="text">
                 <string>Absolute</string>
                </property>
@@ -294,7 +294,14 @@
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_9">
                <item>
-                <widget class="QDoubleSpinBox" name="spinbox_range_adjustment"/>
+                <widget class="QDoubleSpinBox" name="spinbox_range_adjustment">
+                 <property name="maximum">
+                  <double>1000.000000000000000</double>
+                 </property>
+                 <property name="value">
+                  <double>100.000000000000000</double>
+                 </property>
+                </widget>
                </item>
                <item>
                 <widget class="QLabel" name="label_7">
@@ -364,7 +371,7 @@
  <resources/>
  <connections>
   <connection>
-   <sender>radioButton_2</sender>
+   <sender>rb_absolute</sender>
    <signal>toggled(bool)</signal>
    <receiver>label_7</receiver>
    <slot>setHidden(bool)</slot>
@@ -380,7 +387,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>radioButton</sender>
+   <sender>rb_relative</sender>
    <signal>toggled(bool)</signal>
    <receiver>label_7</receiver>
    <slot>setVisible(bool)</slot>
@@ -396,7 +403,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>checkBox</sender>
+   <sender>checkbox_if_automatic_range</sender>
    <signal>toggled(bool)</signal>
    <receiver>groupBox_2</receiver>
    <slot>setDisabled(bool)</slot>
@@ -412,7 +419,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>checkBox</sender>
+   <sender>checkbox_if_automatic_range</sender>
    <signal>toggled(bool)</signal>
    <receiver>groupBox_3</receiver>
    <slot>setEnabled(bool)</slot>
