changed for the source spin box the horizontal policy to expanded,
also for long signal names the complete name is now visible

--- a/forms/triggerwidget.ui
+++ b/forms/triggerwidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>253</width>
+    <width>380</width>
     <height>447</height>
    </rect>
   </property>
@@ -34,7 +34,14 @@
       </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="cb_signals"/>
+      <widget class="QComboBox" name="cb_signals">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -49,6 +56,12 @@
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QLabel" name="label_2">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>Triggertype</string>
        </property>
